...
            android:id="@+id/selection_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_label" />

        <TextView
            android:id="@+id/selection_row_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/selection_row_value_margin"
            android:layout_marginStart="@dimen/selection_row_value_margin" />
        <TextView
            android:id="@+id/selection_column_value"
...
            android:layout_marginLeft="@dimen/selection_row_value_margin"
            android:layout_marginStart="@dimen/selection_row_value_margin" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
